@@ -58,6 +58,7 @@ t/17_thread_evt.t
 t/18_unicode.t
 t/19_overlay.t
 t/20_ctx_threads.t
+t/21_locale.t
 t/Tests_Helper.pm
 t/zz_distrib.t
 
